--------------------------------------------------------------------------------
Changes for 1.9.7

New features:
 - [ZBXNEXT-918] redesign Administration->Media types (Eduard)
 - [ZBXNEXT-915] redesign Administration->Authentication (Eduard)
 - [ZBXNEXT-966] update jQuery to 1.6.4 (Eduard)
 - [ZBX-1357] updated Dutch, German, Japanese, Russian, and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
 - [ZBX-3946] fixed errors when create trigger with dependencies (Vedmak)
 - [ZBX-3921] fixed change link shown for maps in slide show (Vedmak)
 - [ZBX-4082] fixed error in Monitoring->Triggers when acknowledges are disabled (Vedmak)
 - [ZBX-4080] fixed host header info shown for creation form (Vedmak)
 - [ZBX-3987] fixed errors when change host in Monitoring->Graphs (Vedmak)
 - [ZBX-4114] fixed icon maps form height on dragging (Vedmak)
 - [ZBX-4101] fixed excess borders in screen cell configuration form (Vedmak)
 - [ZBX-3786] fixed incorrect inheritance of items when template is linked to another template linked to host (Vedmak)
 - [ZBX-1207] fixed host full clone with custom graphs (Vedmak)

--------------------------------------------------------------------------------
Changes for 1.9.6

New features:
 - [ZBXNEXT-747] added direct SNMP trap monitoring for snmptrapd and embed perl or SNMPTT (Eduard, rudolfs, Vedmak)
 - [ZBX-4116] fixed ibm_db2 update patch for help_items table (rudolfs)
 - [ZBXNEXT-895] redesign general->Macros (Eduard)
 - [ZBXNEXT-899] redesign general->Images (Eduard)
 - [ZBXNEXT-785] support of automatic selection of map icon element depending on element type (Vedmak,Eduard)
 - [ZBX-3683] removed the obsolete item zabbix[log] (Sasha)
 - [ZBXNEXT-891] redesign general->Value mapping (Eduard)
 - [ZBXNEXT-889] redesign general->Regular expressions (Eduard)
 - [ZBXNEXT-885] redesign general->Housekeeper, Working time and Other (Eduard)
 - [ZBXNEXT-871] redesign general->gui (Eduard)